--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
+    "raw-loader": "^4.0.2",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.0.0"
   }
