--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/typography": "^0.5.x",
     "framer-motion": "^11.0.5",
     "marked": "^11.0.0",
     "next": "^14.0.0",
